Added loading front

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
     <link rel="stylesheet" href="css/githubmapping.css">
+    <link href="https://fonts.googleapis.com/css?family=Pavanam" rel="stylesheet"> 
   </head>
 
   <body>
 
+    <div id="loading">
+      <h1> Loading... </h1>
+    </div>
     <div id="map">
       <button id="switch"> Heatmap </button>
       <footer id="footer">
